# advent-of-code

./: .gitignore  README.md
aoc-2023/: .gitignore  README.md  aoc  day01_a.py  day01_b.py  day04_a.py  day05_a.py  day_02_b.py  justfile  pyproject.toml
aoc-2023/src/aoc_2023/: __init__.py  day02_a.py  day02_b.py  day03_a.py  day03_b.py  day04_b.py  day05_b.py
aoc-2023/src/aoc_2023/day01/: main.py  main_test.py
aoc-2023/src/aoc_2023/day02/: main.py  main_test.py
aoc-2023/src/aoc_2023/day03/: main.py  main_test.py
aoc-2023/src/aoc_2023/day04/: main.py  main_test.py
aoc-2023/src/aoc_2023/day05/: main.py  main_test.py
aoc-2023/src/aoc_2023/day06/: main.py  main_test.py
aoc-2023/src/aoc_2023/day07/: main.py  main_test.py
aoc-2023/src/aoc_2023/day08/: main.py  main_test.py
aoc-2023/src/aoc_2023/day09/: main.py  main_test.py
aoc-2023/src/aoc_2023/day10/: main.py  main_test.py
aoc-2023/src/aoc_2023/day11/: main.py  main_test.py
aoc-2023/src/aoc_2023/day12/: main.py  main_test.py
aoc-2023/src/aoc_2023/day13/: main.py  main_test.py
aoc-2023/src/aoc_2023/day14/: main.py  main_test.py
aoc-2023/src/aoc_2023/day15/: main.py  main_test.py
aoc-2023/src/aoc_2023/day16/: main.py  main_test.py
aoc-2023/src/aoc_2023/day17/: main.py  main_test.py
aoc-2023/templ/day_templ/: main.py
aoc-2024/: .gitignore  aoc  go.mod  justfile
aoc-2024/day01/: main.go  main_test.go
aoc-2024/day02/: main.go  main_test.go
aoc-2024/day03/: main.go  main_test.go
aoc-2024/day04/: main.go  main_test.go
aoc-2024/day05/: main.go  main_test.go
aoc-2025/: .gitignore  aoc  justfile  pyproject.toml
aoc-2025/day_templ/: main_test.py
aoc-2025/src/aoc_2025/day01/: main.py  main_test.py
aoc-2025/src/aoc_2025/day02/: main.py  main_test.py
aoc-2025/src/aoc_2025/day03/: main.py  main_test.py
aoc-2025/src/aoc_2025/day04/: main.py  main_test.py
aoc-2025/src/aoc_2025/day05/: main.py  main_test.py
aoc-2025/src/aoc_2025/day06/: main.py  main_test.py
aoc-2025/src/aoc_2025/day07/: main.py  main_test.py
aoc-2025/src/aoc_2025/day08/: main.py  main_test.py
aoc-2025/src/aoc_2025/day09/: main.py  main_test.py
aoc-2025/src/aoc_2025/day10/: main.py  main_test.py
aoc-2025/src/aoc_2025/day11/: main.py  main_test.py
aoc-2025/src/aoc_2025/day12/: main.py  main_test.py
aoc-2025/templ/day_templ/: main.py
(+43 files in other folders)
