[project]
name = "aoc-2023"
version = "0.1.0"
description = "Advent of Code 2023"
readme = "README.md"
authors = [
    { name = "Andrew Tiu", email = "63322884+winter-again@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "basedpyright>=1.30.1",
    "pytest>=8.4.1",
]
