[project]
name = "aoc-2023"
version = "0.1.0"
description = "Advent of Code 2023"
readme = "README.md"
authors = [
    { name = "Andrew Tiu", email = "63322884+winter-again@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.basedpyright]
# silence some diagnostics
typeCheckingMode = "strict"
# reportAny = false
# reportUnusedCallResult = false

[tool.pytest.ini_options]
markers = [
    "sample: test for sample input",
    "real: test for real input"
]
