[project]
name = "aoc-2025"
version = "0.1.0"
description = "Advent of Code 2025"
readme = "README.md"
authors = [
    { name = "Andrew Tiu", email = "63322884+winter-again@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.3.5",
    "scipy>=1.16.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.basedpyright]
include = ["src"]

typeCheckingMode = "standard"
# reportAny = false
# reportUnusedCallResult = false

[tool.ruff.lint]
ignore = [
    "E741", # ignore ambiguous variable name lint
]

# [tool.pytest.ini_options]
# markers = [
#     "sample: test for sample input",
#     "real: test for real input"
# ]
